--- a/presenter.css
+++ b/presenter.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 .slide {
-  position: fixed;
+  position: absolute;
   display: none;
 }
 
